--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Fish Tank Monitor</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <style>
         html,
         body,
