fixup! fixup! extended to a web app

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>Fish Tank Monitor</title>
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/coral.png">
     <style>
         html,
         body,
